<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="281dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColorHint="@color/hintText"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewUserName"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
        app:layout_constraintVertical_bias="0.884" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:text="Welcome to your new journey!"
        android:textAlignment="center"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_round"
        android:onClick="loginButton"
        android:text="Sign in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessageMainActivity"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_round"
        android:onClick="registerButton"
        android:text="Sign up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignin"
        app:layout_constraintVertical_bias="0.161" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="322dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/appname122" />

    <ImageView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/baseline_person_3_24"
        android:textColor="@color/TextColor"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

    <ImageView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/baseline_lock_24"
        android:textColor="@color/TextColor"
        app:layout_constraintBottom_toTopOf="@+id/textViewMessageMainActivity"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="281dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColorHint="@color/hintText"
        app:layout_constraintBottom_toTopOf="@+id/textViewMessageMainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword" />

    <TextView
        android:id="@+id/textViewMessageMainActivity"
        android:layout_width="320dp"
        android:layout_height="31dp"
        android:layout_marginBottom="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up/Sign In as admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup"
        android:textStyle="bold"
        android:onClick="goToAdminLogin"
        android:textColor="@color/TextColor"/>

    <TextView
        android:id="@+id/textViewSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>